unionify/tests/fail/zero_sized_union.rs
use unionify::unionify;

#[unionify(Bar)]
pub enum Foo {
    A,
    B,
}

fn main() {}
